--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -43,7 +43,8 @@
     "mongodb-chatbot-server": "*",
     "mongodb-rag-core": "*",
     "typechat": "^0.1.1",
-    "yaml": "^2.3.4"
+    "yaml": "^2.3.4",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7",
