--- a/packages/scripts/tsconfig.json
+++ b/packages/scripts/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "target": "es2020",
+    "lib": ["ES2024"],
     "outDir": "./build"
   },
   "include": ["./src/**/*.ts"]
