--- a/.drone.yml
+++ b/.drone.yml
@@ -17,12 +17,11 @@ steps:
   - name: test
     image: node:18
     commands:
-      # - npm ci
-      # - npx playwright install chromium --with-deps
-      # - npm run build -- --scope='{mongodb-rag-core,mongodb-rag-ingest,ingest-mongodb-public}'
+      - npm ci
+      - npx playwright install chromium --with-deps
+      - npm run build -- --scope='{mongodb-rag-core,mongodb-rag-ingest,ingest-mongodb-public}'
       # - npm run lint
-      # - npm run test -- --scope=ingest-mongodb-public -- --testNamePattern="WebDataSource"
-      - echo "Skip Testing"
+      - npm run test -- --scope=ingest-mongodb-public
 
     environment:
       PORT: 3000
