--- a/.drone.yml
+++ b/.drone.yml
@@ -19,9 +19,9 @@ steps:
     commands:
       - npm ci
       - npx playwright install chromium --with-deps
-      - npm run build -- --scope='{mongodb-rag-core,mongodb-rag-ingest,ingest-mongodb-public}'
-      # - npm run lint
-      - npm run test -- --scope=ingest-mongodb-public
+      - npm run build
+      - npm run lint
+      - npm run test
 
     environment:
       PORT: 3000
