rm deploy trigger for branch

--- a/.drone.yml
+++ b/.drone.yml
@@ -412,7 +412,7 @@ name: staging-build-ingest-mongodb-public
 
 trigger:
   branch:
-    - EAI-639
+    - main
   event:
     - push
   paths:
@@ -477,7 +477,7 @@ trigger:
       - package.json
 
   branch:
-    - EAI-639
+    - main
 
 steps:
   # Deploys docker image associated with staging build that triggered promotion
