--- a/packages/chatbot-server-mongodb-public/package.json
+++ b/packages/chatbot-server-mongodb-public/package.json
@@ -23,7 +23,8 @@
     "start": "pm2-runtime ./build/index.js",
     "test": "jest --forceExit",
     "release": "release-it",
-    "evaluate": "braintrust eval"
+    "evaluate": "braintrust eval",
+    "generate-eval-cases": "ts-node src/eval/bin/generateEvalCasesYamlFromCSV.ts"
   },
   "dependencies": {
     "@slack/web-api": "^7.8.0",
