--- a/.drone.yml
+++ b/.drone.yml
@@ -18,6 +18,7 @@ steps:
     image: node:18
     commands:
       - npm ci
+      - npx playwright install chromium --with-deps
       - npm run build
       - npm run lint
       - npm run test
