--- a/.drone.yml
+++ b/.drone.yml
@@ -976,6 +976,7 @@ name: staging-build-datasets-service
 trigger:
   branch:
     - main
+    - EAI-871 # TODO: remove before merge
   event:
     - push
   paths:
@@ -1031,6 +1032,7 @@ trigger:
 
   branch:
     - main
+    - EAI-871 # TODO: remove before merge
 
 steps:
   # Deploys docker image associated with staging build that triggered promotion
