--- a/packages/datasets/package.json
+++ b/packages/datasets/package.json
@@ -49,7 +49,8 @@
     "unified": "^11.0.4",
     "unist-util-visit": "^5.0.0",
     "unist-util-visit-parents": "^6.0.1",
-    "yaml": "^2.4.1"
+    "yaml": "^2.4.1",
+    "zod-to-json-schema": "^3.24.3"
   },
   "keywords": [],
   "author": "",
