--- a/packages/datasets/.env.example
+++ b/packages/datasets/.env.example
@@ -8,3 +8,4 @@ HUGGINGFACE_ACCESS_TOKEN="hf_..."
 HUGGINGFACE_DOCS_CONTENT_REPO="someuser/some-repo"
 MONGODB_CONNECTION_URI="..."
 MONGODB_DATABASE_NAME="docs-chatbot-dev"
+MONGODB_TEXT_TO_CODE_CONNECTION_URI="..."
