--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "scripts:removeTestDatabases": "lerna run --scope='scripts' removeTestDatabases -- ",
     "scripts:materializeScrubbedMessagesStats:all": "lerna run --scope='scripts' materializeScrubbedMessagesStats:all",
     "scripts:materializeScrubbedMessagesStats:latest": "lerna run --scope='scripts' materializeScrubbedMessagesStats:latest",
+    "scripts:listSlackMessages": "lerna run --scope='scripts' listSlackMessages -- ",
+    "scripts:removeSlackMessage": "lerna run --scope='scripts' removeSlackMessage -- ",
     "server:start": "lerna run start --scope='chatbot-server-mongodb-public'",
     "eval:conversationQualityCheckPipeline": "lerna run pipeline:conversationQualityCheck --scope='chatbot-eval-mongodb-public'",
     "eval:faqConversationQualityCheckPipeline": "lerna run pipeline:faqConversationQualityCheck --scope='chatbot-eval-mongodb-public'"
