--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -24,6 +24,8 @@
     "removeTestDatabases": "npm run build && node ./build/removeTestDatabases.js",
     "getConversationText": "npm run build && node ./build/getConversationText.js",
     "findPageTitles": "npm run build && node ./build/main/findPageTitlesMain.js",
+    "listSlackMessages": "npm run build && node ./build/main/listSlackMessagesMain.js",
+    "removeSlackMessage": "npm run build && node ./build/main/removeSlackMessageMain.js",
     "test": "jest --forceExit",
     "build": "npm run clean && tsc -b tsconfig.build.json",
     "postbuild": "cp ./src/MessageAnalysis.d.ts ./build/",
@@ -38,6 +40,7 @@
   "dependencies": {
     "@cdxoo/dbscan": "^1.1.1",
     "@release-it/bumper": "^5.1.0",
+    "@slack/web-api": "^7.8.0",
     "@stdlib/random-sample": "^0.2.1",
     "csv": "^6.3.1",
     "dotenv": "^16.3.1",
