--- a/packages/datasets/package.json
+++ b/packages/datasets/package.json
@@ -31,7 +31,9 @@
     "convertCodeExamplePromptYamlToCsvUsefulOnly": "npm run build && node ./build/bin/convertCodeExamplePromptYamlToCsvUsefulOnly.js",
     "countExamplesByLength": "npm run build && node ./build/bin/countExamplesByLength.js",
     "uploadContentDatasetToHuggingFace": "npm run build && node ./build/bin/huggingFace/uploadContentDatasetToHuggingFace.js",
-    "uploadCodeExampleDatasetToHuggingFace": "npm run build && node ./build/bin/huggingFace/uploadCodeExampleDatasetToHuggingFace.js"
+    "uploadCodeExampleDatasetToHuggingFace": "npm run build && node ./build/bin/huggingFace/uploadCodeExampleDatasetToHuggingFace.js",
+    "generateDbSchemas": "npm run build && node ./build/bin/generateDbSchemas.js",
+    "generateMongoshDatasets": "npm run build && node ./build/bin/generateMongoshDatasets.js"
   },
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.12",
