--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
   "devDependencies": {
     "@stylistic/eslint-plugin-js": "^1.7.0",
     "lerna": "^5.6.2"
+  },
+  "dependencies": {
+    "csv-writer": "^1.6.0"
   }
 }
