--- a/packages/mongodb-rag-core/tsconfig.build.json
+++ b/packages/mongodb-rag-core/tsconfig.build.json
@@ -1,4 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["**/*.test.ts", "test/**/*.ts"]
+  "exclude": ["**/*.test.ts", "**/*.test-d.ts", "test/**/*.ts"]
 }
