working badge question report

--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -32,8 +32,8 @@
     "@types/node-fetch": "^2.6.4",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "csv-parser": "^3.2.0",
     "chatbot-server-mongodb-public": "*",
+    "csv-parser": "^3.2.0",
     "eslint": "^8",
     "eslint-config-prettier": "^8",
     "eslint-plugin-jsdoc": "^46.4.5",
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "@supercharge/promise-pool": "^3.2.0",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16",
     "mongodb-chatbot-server": "*",
     "mongodb-rag-core": "*",
