--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -56,6 +56,7 @@
     "mongodb-chatbot-server": "*",
     "mongodb-rag-core": "*",
     "mongodb-schema": "^12.2.0",
+    "yaml": "^2.7.1",
     "zod": "^3.23.8"
   }
 }
