--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -14,6 +14,7 @@
     "findFaq": "npm run build && node ./build/main/findFaqMain.js",
     "upgradeFaqEntries": "npm run build && node ./build/main/upgradeFaqEntriesMain.js",
     "materializeScrubbedMessagesStats:all": "npm run build && node ./build/main/materializeScrubbedMessagesStats.js --all",
+    "materializeScrubbedMessagesStats:since": "npm run build && node ./build/main/materializeScrubbedMessagesStats.js --since",
     "materializeScrubbedMessagesStats:latest": "npm run build && node ./build/main/materializeScrubbedMessagesStats.js",
     "createView/messages_by_rating": "npm run build && node ./build/createView/messages_by_rating.js",
     "createView/top_250_references": "npm run build && node ./build/createView/top_250_references.js",
@@ -48,7 +49,8 @@
     "mongodb-chatbot-server": "*",
     "mongodb-rag-core": "*",
     "typechat": "^0.1.1",
-    "yaml": "^2.3.4"
+    "yaml": "^2.3.4",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7",
