--- a/packages/datasets/.env.example
+++ b/packages/datasets/.env.example
@@ -9,3 +9,4 @@ HUGGINGFACE_DOCS_CONTENT_REPO="someuser/some-repo"
 HUGGINGFACE_DOCS_CODE_EXAMPLE_REPO="someuser/some-repo"
 MONGODB_CONNECTION_URI="..."
 MONGODB_DATABASE_NAME="docs-chatbot-dev"
+MONGODB_TEXT_TO_CODE_CONNECTION_URI="..."
