--- a/.drone.yml
+++ b/.drone.yml
@@ -481,7 +481,7 @@ trigger:
 
   branch:
     - main
-    - - up_k8s_ingest_resources
+    - up_k8s_ingest_resources
 
 steps:
   # Deploys docker image associated with staging build that triggered promotion
