--- a/packages/chatbot-server-mongodb-public/package.json
+++ b/packages/chatbot-server-mongodb-public/package.json
@@ -50,6 +50,7 @@
     "@types/common-tags": "^1.8.1",
     "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.21",
+    "@types/express-serve-static-core": "^5.0.6",
     "@types/jest": "^29.5.2",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
@@ -59,6 +60,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jest": "^27.2.1",
     "jest": "^29.6.1",
+    "node-mocks-http": "^1.16.2",
     "nodemon": "^3.0.1",
     "prettier": "^2.8.7",
     "readline": "^1.3.0",
