--- a/packages/mongodb-rag-core/package.json
+++ b/packages/mongodb-rag-core/package.json
@@ -29,6 +29,7 @@
     ".": "./build/index.js",
     "./langchain": "./build/langchain.js",
     "./mongodb": "./build/mongodb.js",
+    "./mongoDbMetadata": "./build/mongoDbMetadata/index.js",
     "./openai": "./build/openai.js",
     "./braintrust": "./build/braintrust.js",
     "./dataSources": "./build/dataSources/index.js",
@@ -82,6 +83,7 @@
     "@supercharge/promise-pool": "^3.2.0",
     "acquit": "^1.3.0",
     "acquit-require": "^0.1.1",
+    "ai": "^4.3.9",
     "braintrust": "^0.0.193",
     "common-tags": "^1",
     "deep-equal": "^2.2.3",
@@ -94,7 +96,7 @@
     "ignore": "^5.3.2",
     "langchain": "^0.3.5",
     "mongodb": "^6.3.0",
-    "openai": "^4.68.4",
+    "openai": "^4.95.0",
     "rimraf": "^6.0.1",
     "simple-git": "^3.27.0",
     "toml": "^3.0.0",
