--- a/packages/ingest-mongodb-public/package.json
+++ b/packages/ingest-mongodb-public/package.json
@@ -49,7 +49,7 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "@playwright/test": "^1.50.1",
+    "@playwright/test": "1.51.1",
     "cheerio": "^1.0.0",
     "common-tags": "^1.8.2",
     "docdoctor": "^0.1.2",
