--- a/packages/mongodb-rag-core/package.json
+++ b/packages/mongodb-rag-core/package.json
@@ -76,6 +76,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@ai-sdk/azure": "^1.3.21",
     "@ai-sdk/openai": "^1.3.20",
     "@apidevtools/swagger-parser": "^10.1.0",
     "@langchain/anthropic": "^0.3.6",
