--- a/packages/ingest-mongodb-public/environments/staging.yml
+++ b/packages/ingest-mongodb-public/environments/staging.yml
@@ -59,6 +59,35 @@ cronJobs:
         cpu: 4
         memory: 8Gi
     backoffLimit: 3
+  - name: ingest-pages-with-links
+    schedule: "0 9 * * *" # every day at 9am UTC (4AM EST)
+    command: ["npm", "run", "ingest:pages:docsWithLinks"]
+    env:
+      MONGODB_DATABASE_NAME: docs-chatbot-staging
+      VECTOR_SEARCH_INDEX_NAME: vector_index
+      OPENAI_CHAT_COMPLETION_MODEL_VERSION: 2023-06-01-preview
+      OPENAI_API_VERSION: "2024-06-01"
+      OPENAI_VERIFIED_ANSWER_EMBEDDING_DEPLOYMENT: "docs-chatbot-embedding-ada-002"
+      OPENAI_RETRIEVAL_EMBEDDING_DEPLOYMENT: "text-embedding-3-small"
+      MONGODB_COLLECTION_NAME: pages_with_links
+    envSecrets:
+      MONGODB_CONNECTION_URI: docs-chatbot-staging
+      OPENAI_ENDPOINT: docs-chatbot-staging
+      OPENAI_API_KEY: docs-chatbot-staging
+      OPENAI_CHAT_COMPLETION_DEPLOYMENT: docs-chatbot-staging
+      DEVCENTER_CONNECTION_URI: docs-chatbot-staging
+      GITHUB_ACCESS_TOKEN: docs-chatbot-staging
+      UNIVERSITY_DATA_API_KEY: docs-chatbot-staging
+    resources:
+      # guaranteed amount of resources
+      requests:
+        cpu: 2
+        memory: 4Gi
+      # maximum allowed resources
+      limits:
+        cpu: 4
+        memory: 8Gi
+    backoffLimit: 3
 
 # Alerts
 defaultAlerts:
