--- a/packages/ingest-mongodb-docs/package.json
+++ b/packages/ingest-mongodb-docs/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ingest-mongodb-odcs",
+  "name": "ingest-mongodb-docs",
   "version": "0.12.1",
-  "description": "Plugin for ingesting MongoDB docs from Snooty Data API.",
+  "description": "Ingest MongoDB docs from Snooty Data API.",
   "author": "",
   "license": "Apache-2.0",
   "keywords": [],
@@ -16,19 +16,17 @@
     "release": "release-it",
     "lint": "eslint ./src --ext ts --report-unused-disable-directives",
     "lint:fix": "npm run lint -- --fix && prettier ./src --check --write",
-    "ingest:pages:docsWithLinks": "../../node_modules/mongodb-rag-ingest/build/main.js pages update --config ./build/docsWithLinks.config.js",
+    "ingest:pages": "node ./build/cli/main.js pages update --config ./build/ingestDocs.config.js",
+    "ingest:all": "node ./build/cli/main.js all --config ./build/ingestDocs.config.js",
     "test": "node --experimental-vm-modules ../../node_modules/jest/bin/jest.js --forceExit"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7",
     "@babel/types": "^7.22.5",
     "@types/encodeurl": "^1.0.2",
-    "@types/html-to-text": "^9.0.4",
     "@types/jest": "^29.5.2",
     "@types/node": "^12",
     "@types/node-fetch": "^2.6.4",
-    "@types/turndown": "^5.0.2",
-    "@types/xml2js": "^0.4.14",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "eslint": "^8",
@@ -46,19 +44,16 @@
   },
   "dependencies": {
     "@supercharge/promise-pool": "^3.2.0",
-    "cheerio": "^1.0.0",
     "common-tags": "^1.8.2",
     "deep-equal": "^2.2.3",
     "docdoctor": "^0.1.2",
     "dotenv": "^16",
     "encodeurl": "^2.0.0",
-    "html-to-text": "^9.0.5",
     "jsonl-parse-stringify": "^1.0.3",
     "mongodb": "^6.16.0",
     "node-fetch": "^2.7.0",
-    "striptags": "^3.2.0",
-    "turndown": "^7.2.0",
-    "xml2js": "^0.6.2",
-    "yaml": "^2.7.1"
+    "winston": "^3.17.0",
+    "yaml": "^2.7.1",
+    "yargs": "^17.7.2"
   }
 }
