--- a/packages/ingest-mongodb-docs/tsconfig.json
+++ b/packages/ingest-mongodb-docs/tsconfig.json
@@ -1,7 +1,19 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./build"
+    "target": "es2020",
+    "lib": ["ES2023", "DOM"],
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "allowJs": false,
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "downlevelIteration": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strictNullChecks": true,
+    "skipLibCheck": true,
+    "strict": true
   },
   "include": ["./src/**/*.ts"]
 }
