fix build out dir

--- a/packages/ingest-mongodb-docs/tsconfig.json
+++ b/packages/ingest-mongodb-docs/tsconfig.json
@@ -13,7 +13,8 @@
     "forceConsistentCasingInFileNames": true,
     "strictNullChecks": true,
     "skipLibCheck": true,
-    "strict": true
+    "strict": true,
+    "outDir": "./build"
   },
   "include": ["./src/**/*.ts"]
 }
