--- a/packages/chatbot-server-mongodb-public/package.json
+++ b/packages/chatbot-server-mongodb-public/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@segment/analytics-node": "^2.2.1",
     "@slack/web-api": "^7.8.0",
+    "ahocorasick": "^1.0.2",
     "common-tags": "^1.8.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
@@ -47,6 +48,7 @@
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@lg-chat/rich-links": "^1.2.0",
+    "@types/ahocorasick": "^1.0.0",
     "@types/common-tags": "^1.8.1",
     "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.21",
@@ -60,6 +62,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jest": "^27.2.1",
     "jest": "^29.6.1",
+    "mongodb-memory-server": "^10.1.4",
     "node-mocks-http": "^1.16.2",
     "nodemon": "^3.0.1",
     "prettier": "^2.8.7",
