--- a/packages/mongodb-rag-core/package.json
+++ b/packages/mongodb-rag-core/package.json
@@ -27,6 +27,7 @@
   "main": "./build/index.js",
   "exports": {
     ".": "./build/index.js",
+    "./aiSdk": "./build/aiSdk.js",
     "./langchain": "./build/langchain.js",
     "./mongodb": "./build/mongodb.js",
     "./mongoDbMetadata": "./build/mongoDbMetadata/index.js",
@@ -75,6 +76,8 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@ai-sdk/azure": "^1.3.23",
+    "@ai-sdk/openai": "^1.3.22",
     "@apidevtools/swagger-parser": "^10.1.0",
     "@langchain/anthropic": "^0.3.6",
     "@langchain/community": "^0.3.10",
@@ -83,7 +86,7 @@
     "@supercharge/promise-pool": "^3.2.0",
     "acquit": "^1.3.0",
     "acquit-require": "^0.1.1",
-    "ai": "^4.3.9",
+    "ai": "^4.3.15",
     "braintrust": "^0.0.193",
     "common-tags": "^1",
     "deep-equal": "^2.2.3",
