--- a/packages/chatbot-server-mongodb-public/.env.example
+++ b/packages/chatbot-server-mongodb-public/.env.example
@@ -1,5 +1,6 @@
 PORT=3000
 OPENAI_ENDPOINT="https://<resource_name>.openai.azure.com/"
+OPENAI_RESOURCE_NAME="<resource_name>"
 OPENAI_API_KEY="<api_key>"
 OPENAI_VERIFIED_ANSWER_EMBEDDING_DEPLOYMENT="docs-chatbot-embedding-ada-002"
 OPENAI_RETRIEVAL_EMBEDDING_DEPLOYMENT="text-embedding-3-small"
@@ -13,6 +14,7 @@ VECTOR_SEARCH_INDEX_NAME="<index_name>"
 NODE_ENV="development"
 ALLOWED_ORIGINS="http://example.com,http://localhost:5173"
 OPENAI_PREPROCESSOR_CHAT_COMPLETION_DEPLOYMENT="<deployment name>"
+OPENAI_ANALYZER_CHAT_COMPLETION_DEPLOYMENT="<deployment name>"
 OPENAI_API_VERSION="2024-06-01"
 JUDGE_EMBEDDING_MODEL="text-embedding-3-small"
 JUDGE_LLM="gpt-4o-mini"
