--- a/packages/chatbot-server-mongodb-public/environments/staging.yml
+++ b/packages/chatbot-server-mongodb-public/environments/staging.yml
@@ -13,6 +13,8 @@ env:
   OPENAI_CHAT_COMPLETION_DEPLOYMENT: gpt-4o
   OPENAI_VERIFIED_ANSWER_EMBEDDING_DEPLOYMENT: "docs-chatbot-embedding-ada-002"
   OPENAI_RETRIEVAL_EMBEDDING_DEPLOYMENT: "text-embedding-3-small"
+  OPENAI_RESOURCE_NAME: "docs-ai-chatbot-useast2resource-sandbox"
+  OPENAI_ANALYZER_CHAT_COMPLETION_DEPLOYMENT: gpt-4.1-mini
   BRAINTRUST_CHATBOT_TRACING_PROJECT_NAME: "chatbot-responses-staging"
   JUDGE_LLM: "gpt-4o-mini"
   JUDGE_EMBEDDING_MODEL: "text-embedding-3-small"
