--- a/packages/datasets/package.json
+++ b/packages/datasets/package.json
@@ -31,6 +31,9 @@
     "classifyCodeExamplesForUsefulness": "npm run build && node ./build/bin/classifyCodeExamplesForUsefulness.js",
     "convertCodeExamplePromptYamlToCsvUsefulOnly": "npm run build && node ./build/bin/convertCodeExamplePromptYamlToCsvUsefulOnly.js",
     "countExamplesByLength": "npm run build && node ./build/bin/countExamplesByLength.js",
+    "summarizeAtlasVectorSearchDocs": "npm run build && node ./build/bin/summarizeAtlasVectorSearchDocs.js",
+    "summarizeKotlinDriverDocs": "npm run build && node ./build/bin/summarizeKotlinDriverDocs.js",
+    "summarizePracticalAggregationsBook": "npm run build && node ./build/bin/summarizePracticalAggregationsBook.js",
     "uploadContentDatasetToHuggingFace": "npm run build && node ./build/bin/huggingFace/uploadContentDatasetToHuggingFace.js",
     "uploadCodeExampleDatasetToHuggingFace": "npm run build && node ./build/bin/huggingFace/uploadCodeExampleDatasetToHuggingFace.js",
     "generateDbSchemas": "npm run build && node ./build/bin/generateDbSchemas.js",
@@ -42,6 +45,8 @@
     "@supercharge/promise-pool": "^3.2.0",
     "@types/unist": "^3.0.2",
     "csv": "^6.3.9",
+    "gpt-tokenizer": "^2.8.1",
+    "langchain": "^0.3.14",
     "lang-map": "^0.4.0",
     "llamaindex": "^0.2.9",
     "lodash.samplesize": "^4.2.0",
